data/objects/Credentials__c.object
<CustomObject>
    <fields>
        <fullName>Cert_ID__c</fullName>
        <label>Cert ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certified_Date__c</fullName>
        <label>Certified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Certifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Credential_Type__c</fullName>
        <label>Credential Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Certifications</fullName>
                </value>
                <value>
                    <fullName>Degrees</fullName>
                </value>
                <value>
                    <fullName>Licensing</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credentials_Description__c</fullName>
        <label>Credentials Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credentials__c</fullName>
        <label>Credentials</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Included_in_Resume__c</fullName>
        <label>Included in Resume?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Credentials</relationshipLabel>
        <relationshipName>Credentials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <label>Owner</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Created_On__c</fullName>
        <label>Record Created On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Reason__c</fullName>
        <label>Status Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Active_Inactive</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Active_Inactive</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Valid_To__c</fullName>
        <label>Valid To</label>
        <type>Date</type>
    </fields>
    <label>Credential</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Organization__c</columns>
        <columns>Credentials__c</columns>
        <columns>Credentials_Description__c</columns>
        <columns>Valid_To__c</columns>
        <columns>Cert_ID__c</columns>
        <columns>Password__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Copy_of_All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Credentials__c</columns>
        <columns>Valid_To__c</columns>
        <columns>Credentials_Description__c</columns>
        <columns>Organization__c</columns>
        <columns>Cert_ID__c</columns>
        <columns>Password__c</columns>
        <columns>Comments__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>Certifications &amp; Licenses - All</label>
    </listViews>
    <nameField>
        <displayFormat>Cred-{0000000}</displayFormat>
        <label>Credential Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credentials</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>